Fix layout shift

--- a/demo/src/app-header.css
+++ b/demo/src/app-header.css
@@ -3,7 +3,6 @@
 }
 
 .header-content {
-  height: 60px;
   line-height: 60px;
   max-width: 60%;
   padding-left: 3rem;
